# poly-weyl

./: LICENSE  README.md  dune-project  make_doc.sh  math-alg.install  math-alg.opam  math-latex.install  math-latex.opam  math.install
docs/: index.html
docs/AlgebraOfField/: index.html
docs/AlgebraOfField/argument-1-F/: index.html
docs/ComplexField/: index.html
docs/ComplexField/argument-1-F/: index.html
docs/ComplexNumbers/: index.html
docs/Int/: index.html
docs/Integers/: index.html
docs/Monomial/: index.html
docs/Monomial1/: index.html
docs/Monomial_generic/: index.html
docs/Polynomial/: index.html
docs/Polynomial1/: index.html
docs/Polynomial1_make/: index.html
docs/Polynomial_generic/: index.html
docs/Polynomial_make/: index.html
docs/RatPoly/: index.html
docs/RatPoly1/: index.html
docs/Rationals/: index.html
docs/RealNumbers/: index.html
docs/RealPoly/: index.html
docs/RealPoly1/: index.html
docs/math-alg/: index.html
docs/math-latex/: index.html
docs/module-type-AbelianGroup/: index.html
docs/module-type-Algebra/: index.html
docs/module-type-Field/: index.html
docs/module-type-Group/: index.html
docs/module-type-LieAlg/: index.html
docs/module-type-Module/: index.html
docs/module-type-Monomial/: index.html
docs/module-type-Polynomial/: index.html
docs/module-type-Polynomial1/: index.html
docs/module-type-Ring/: index.html
docs/module-type-Rng/: index.html
docs/module-type-VSpace/: index.html
lib/: dune  latex.ml  latex.mli  math.ml  math.mli
test/: dune  test.ml
(+77 files in other folders)
